[package]
name = "fuel-e2e-tests"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-e2e-tests"
rust-version = "1.84.1"

[dependencies]
dotenv = "0.15"
# fuel-core-lib needed because we cannot configure the health-check timeout and
# that causes our CI to give up on waiting for the spawned fuel-core binary to
# become healthy
fuels = { version = "0.70", features = ["fuel-core-lib"] }
tokio = { version = "1.43.0", features = ["full"] }
color-eyre = "0.6"
# unfortunately we need to use the fuel-core-client because the SDK doesn't
# expose the total fee in the tx status
fuel-core-client = "0.41"
rand = "0.9.0"
