[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
forc = { version = "0.18.1", features = ["test"] }
forc-pkg = { version = "0.18.1" }
anyhow = "1.0.58"
tokio = { version = "1.20.0", features = ["fs"] }
tokio-stream = { version = "0.1.9", features = ["fs"] }
serde_json = "1.0.82"
serde = "1.0.139"
itertools = "0.10.3"
crc32fast = "1.3.2"
petgraph = "0.6.2"
async-recursion = "1.0.0"
