[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
build_utils = { path = "../packages/build_utils" }
clap = { version = "3.2.16", features = ["derive"] }
futures = "0.3.21"
itertools = "0.10.3"
num_cpus = "1.13.1"
tokio = { version = "1.20.0", features = ["fs", "rt-multi-thread", "macros"] }
